--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Herança Divina</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="topo">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Loja</a></li>
+        <li><a href="#">Consultas</a></li>
+      </ul>
+    </nav>
+    <div class="banner">
+      <h1>Herança Divina</h1>
+      <p>Conecte-se com a sua essência divina</p>
+      <div class="botoes">
+        <a href="#" class="btn">Ver Produtos</a>
+        <a href="#" class="btn claro">Agendar Consulta</a>
+      </div>
+    </div>
+  </header>
 
+  <section class="destaques">
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1594663658320-9697445af6d6" alt="Kit de Banho">
+      <h2>Kits de Banho, Velas, Incensos e mais</h2>
+    </div>
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe" alt="Tarô">
+      <h2>Jogo de Tarô e Baralho Cigano</h2>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Herança Divina · Todos os direitos reservados</p>
+  </footer>
+</body>
+</html>
