--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <header class="topo">
-    <nav>
-      <ul>
+  <div class="banner" style="background-image: url('banner-heranca.jpg');">
+    <!-- conteúdo -->
+  </div>
+  </header>
         <li><a href="#">Home</a></li>
         <li><a href="#">Loja</a></li>
         <li><a href="#">Consultas</a></li>
