--- a/index.html
+++ b/index.html
@@ -4,43 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Herança Divina</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="topo">
-  <div class="banner" style="background-image: url('banner-heranca.jpg');">
-    <!-- conteúdo -->
-  </div>
-  </header>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Loja</a></li>
-        <li><a href="#">Consultas</a></li>
-      </ul>
-    </nav>
-    <div class="banner">
-      <h1>Herança Divina</h1>
-      <p>Conecte-se com a sua essência divina</p>
-      <div class="botoes">
-        <a href="#" class="btn">Ver Produtos</a>
-        <a href="#" class="btn claro">Agendar Consulta</a>
-      </div>
-    </div>
+
+  <!-- 🌟 Banner Principal -->
+  <header class="topo" style="background-image: url('banner.jpg'); background-size: cover; background-position: center; height: 100vh; display: flex; align-items: center; justify-content: center;">
+    <h1 style="color: #e2d4aa; font-size: 3em; text-shadow: 2px 2px 5px #000;">Herança Divina</h1>
   </header>
 
-  <section class="destaques">
-    <div class="item">
-      <img src="https://images.unsplash.com/photo-1594663658320-9697445af6d6" alt="Kit de Banho">
-      <h2>Kits de Banho, Velas, Incensos e mais</h2>
-    </div>
-    <div class="item">
-      <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe" alt="Tarô">
-      <h2>Jogo de Tarô e Baralho Cigano</h2>
-    </div>
-  </section>
+  <!-- ✨ Conteúdo Místico: Produtos & Serviços -->
 
-  <footer>
-    <p>&copy; 2025 Herança Divina · Todos os direitos reservados</p>
+  <main>
+
+    <!-- 🔮 Incensos -->
+    <section id="incensos" class="sessao">
+      <h2>Incensos</h2>
+      <img src="incensos.jpg" alt="Incensos místicos" class="imagem-destaque" />
+      <p>Purifique, energize e harmonize seus ambientes com nossos incensos sagrados.</p>
+    </section>
+
+    <!-- 🕯️ Velas -->
+    <section id="velas" class="sessao">
+      <h2>Velas</h2>
+      <img src="velas.jpg" alt="Velas ritualísticas" class="imagem-destaque" />
+      <p>Velas encantadas e personalizadas para seus rituais de luz, amor e prosperidade.</p>
+    </section>
+
+    <!-- 🛁 Banhos -->
+    <section id="banhos" class="sessao">
+      <h2>Kits de Banho</h2>
+      <img src="banhos.jpg" alt="Kits de banho energéticos" class="imagem-destaque" />
+      <p>Banhos para limpeza espiritual, atração de amor, prosperidade e proteção divina.</p>
+    </section>
+
+    <!-- 🔮 Tarô & Baralho Cigano -->
+    <section id="tarot" class="sessao">
+      <h2>Tarô & Baralho Cigano</h2>
+      <img src="tarot.jpg" alt="Cartas de Tarô e Baralho Cigano" class="imagem-destaque" />
+      <p>Consultas intuitivas que revelam caminhos, respostas e segredos do universo.</p>
+    </section>
+
+  </main>
+
+  <!-- ✨ Rodapé -->
+  <footer class="rodape">
+    <p>&copy; 2025 Herança Divina | Energia. Magia. Conexão.</p>
   </footer>
+
 </body>
 </html>
