--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <h1 style="color: #e2d4aa; font-size: 3em; text-shadow: 2px 2px 5px #000;">Herança Divina</h1>
   </header>
 
+<!-- 🌠 Banner Secundário -->
+<section class="banner-secundario">
+  <img src="banner-secundario.jpg" alt="Banner Herança Divina Místico e Sofisticado">
+</section>
+  
   <!-- ✨ Conteúdo Místico: Produtos & Serviços -->
 
   <main>
