--- a/index.html
+++ b/index.html
@@ -2,59 +2,63 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Herança Divina</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- 🌟 Banner Principal -->
-  <header class="topo" style="background-image: url('banner.jpg'); background-size: cover; background-position: center; height: 100vh; display: flex; align-items: center; justify-content: center;">
-    <h1 style="color: #e2d4aa; font-size: 3em; text-shadow: 2px 2px 5px #000;">Herança Divina</h1>
+  <!-- 🌞 Banner Principal -->
+  <header class="topo">
+    <h1>Herança Divina</h1>
   </header>
 
-<!-- 🌠 Banner Secundário -->
-<section class="banner-secundario">
-  <img src="banner-secundario.jpg" alt="Banner Herança Divina Místico e Sofisticado">
-</section>
-  
-  <!-- ✨ Conteúdo Místico: Produtos & Serviços -->
+  <!-- 🌙 Banner Secundário -->
+  <div class="banner-secundario">
+    <img src="banner-secundario.jpg" alt="Banner Secundário">
+  </div>
 
   <main>
 
     <!-- 🔮 Incensos -->
     <section id="incensos" class="sessao">
       <h2>Incensos</h2>
-      <img src="incensos.jpg" alt="Incensos místicos" class="imagem-destaque" />
-      <p>Purifique, energize e harmonize seus ambientes com nossos incensos sagrados.</p>
+      <img src="incensos.jpg" alt="Incensos Místicos">
+      <p>Aromas sagrados para purificar e elevar a energia do seu espaço.</p>
     </section>
 
     <!-- 🕯️ Velas -->
     <section id="velas" class="sessao">
       <h2>Velas</h2>
-      <img src="velas.jpg" alt="Velas ritualísticas" class="imagem-destaque" />
-      <p>Velas encantadas e personalizadas para seus rituais de luz, amor e prosperidade.</p>
+      <img src="velas.jpg" alt="Velas Ritualísticas">
+      <p>Velas para rituais, intenções e conexão com o divino. Inclui vela vermelha poderosa!</p>
     </section>
 
-    <!-- 🛁 Banhos -->
+    <!-- 💧 Banhos -->
     <section id="banhos" class="sessao">
-      <h2>Kits de Banho</h2>
-      <img src="banhos.jpg" alt="Kits de banho energéticos" class="imagem-destaque" />
-      <p>Banhos para limpeza espiritual, atração de amor, prosperidade e proteção divina.</p>
+      <h2>Banhos</h2>
+      <img src="banhos.jpg" alt="Banhos Energéticos">
+      <p>Banhos de ervas para limpeza, proteção e atração de boas energias.</p>
     </section>
 
-    <!-- 🔮 Tarô & Baralho Cigano -->
+    <!-- 🌞 Tarô e Baralho Cigano -->
     <section id="tarot" class="sessao">
       <h2>Tarô & Baralho Cigano</h2>
-      <img src="tarot.jpg" alt="Cartas de Tarô e Baralho Cigano" class="imagem-destaque" />
-      <p>Consultas intuitivas que revelam caminhos, respostas e segredos do universo.</p>
+      <img src="tarot.jpg" alt="Consulta de Tarô">
+      <p>Conecte-se com sua espiritualidade através da sabedoria dos oráculos.</p>
     </section>
 
   </main>
 
-  <!-- ✨ Rodapé -->
-  <footer class="rodape">
-    <p>&copy; 2025 Herança Divina | Energia. Magia. Conexão.</p>
+  <!-- 💬 Botão WhatsApp Flutuante -->
+  <a class="whatsapp-float" href="https://wa.me/5511939375761" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+  </a>
+
+  <!-- 👑 Rodapé Premium Místico -->
+  <footer>
+    <p>✨ Herança Divina • Conectando almas com o sagrado desde 2025 ✨</p>
+    <p>Todos os direitos reservados.</p>
   </footer>
 
 </body>
