--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-  <!-- 🌞 Banner Principal -->
-  <header class="topo">
-    <h1>Herança Divina</h1>
-  </header>
+  <!-- 🌟 Banner Principal -->
+<header class="topo">
+  <h1>Herança Divina</h1>
+  <img src="banner-principal.jpg" alt="Banner Principal" class="banner-principal">
+</header>
 
   <!-- 🌙 Banner Secundário -->
   <div class="banner-secundario">
