--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     </section>
 
   </main>
-
-  <!-- 💬 Botão WhatsApp Flutuante -->
-  <a class="whatsapp-float" href="https://wa.me/5511939375761" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
-  </a>
-
+  
+<!-- Botão Flutuante WhatsApp -->
+<a href="https://wa.me/5511939375761" class="whatsapp-float" target="_blank">
+  <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp">
+</a>
+  
   <!-- 👑 Rodapé Premium Místico -->
   <footer>
     <p>✨ Herança Divina • Conectando almas com o sagrado desde 2025 ✨</p>
