--- a/index.html
+++ b/index.html
@@ -4,62 +4,57 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Herança Divina</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- 🌟 Banner Principal -->
-<header class="topo">
-  <h1>Herança Divina</h1>
-  <img src="banner-principal.jpg" alt="Banner Principal" class="banner-principal">
-</header>
+  <header class="topo">
+    <img src="banner-principal.jpg" alt="Banner Principal" class="banner-principal">
+  </header>
 
   <!-- 🌙 Banner Secundário -->
   <div class="banner-secundario">
     <img src="banner-secundario.jpg" alt="Banner Secundário">
   </div>
 
+  <!-- ✨ Conteúdo Místico -->
   <main>
 
-    <!-- 🔮 Incensos -->
+    <!-- 🕉️ Incensos -->
     <section id="incensos" class="sessao">
       <h2>Incensos</h2>
-      <img src="incensos.jpg" alt="Incensos Místicos">
-      <p>Aromas sagrados para purificar e elevar a energia do seu espaço.</p>
+      <img src="incensos.jpg" alt="Incensos">
     </section>
 
     <!-- 🕯️ Velas -->
     <section id="velas" class="sessao">
       <h2>Velas</h2>
-      <img src="velas.jpg" alt="Velas Ritualísticas">
-      <p>Velas para rituais, intenções e conexão com o divino. Inclui vela vermelha poderosa!</p>
+      <img src="velas.jpg" alt="Velas">
     </section>
 
     <!-- 💧 Banhos -->
     <section id="banhos" class="sessao">
       <h2>Banhos</h2>
-      <img src="banhos.jpg" alt="Banhos Energéticos">
-      <p>Banhos de ervas para limpeza, proteção e atração de boas energias.</p>
+      <img src="banhos.jpg" alt="Banhos">
     </section>
 
-    <!-- 🌞 Tarô e Baralho Cigano -->
+    <!-- 🔮 Tarô e Baralho Cigano -->
     <section id="tarot" class="sessao">
-      <h2>Tarô & Baralho Cigano</h2>
-      <img src="tarot.jpg" alt="Consulta de Tarô">
-      <p>Conecte-se com sua espiritualidade através da sabedoria dos oráculos.</p>
+      <h2>Tarô e Baralho Cigano</h2>
+      <img src="tarot.jpg" alt="Tarô e Baralho Cigano">
     </section>
 
   </main>
-  
-<!-- Botão Flutuante WhatsApp -->
-<a href="https://wa.me/5511939375761" class="whatsapp-float" target="_blank">
-  <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp">
-</a>
-  
-  <!-- 👑 Rodapé Premium Místico -->
-  <footer>
-    <p>✨ Herança Divina • Conectando almas com o sagrado desde 2025 ✨</p>
-    <p>Todos os direitos reservados.</p>
+
+  <!-- 💬 Botão WhatsApp -->
+  <a href="https://wa.me/5511939375761" class="whatsapp-float" target="_blank">
+    <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp">
+  </a>
+
+  <!-- 👣 Rodapé -->
+  <footer class="rodape">
+    <p>✨ Herança Divina © 2025 — Criado com magia, luz e amor ✨</p>
   </footer>
 
 </body>
