--- a/index.html
+++ b/index.html
@@ -2,59 +2,59 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Herança Divina</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- 🌟 Banner Principal -->
+  <!-- ✨ Banner Principal -->
   <header class="topo">
-    <img src="banner-principal.jpg" alt="Banner Principal" class="banner-principal">
+    <img src="banner-principal.jpg" alt="Banner Herança Divina Principal" />
   </header>
 
-  <!-- 🌙 Banner Secundário -->
-  <div class="banner-secundario">
-    <img src="banner-secundario.jpg" alt="Banner Secundário">
-  </div>
+  <!-- ✨ Banner Secundário Novo -->
+  <section class="banner-secundario">
+    <img src="banner-secundario-novo.jpg" alt="Banner Herança Divina Secundário" />
+  </section>
 
-  <!-- ✨ Conteúdo Místico -->
   <main>
 
-    <!-- 🕉️ Incensos -->
-    <section id="incensos" class="sessao">
+    <!-- 🔮 Incensos -->
+    <section class="sessao" id="incensos">
       <h2>Incensos</h2>
-      <img src="incensos.jpg" alt="Incensos">
+      <img src="incensos.jpg" alt="Incensos Místicos" />
     </section>
 
     <!-- 🕯️ Velas -->
-    <section id="velas" class="sessao">
+    <section class="sessao" id="velas">
       <h2>Velas</h2>
-      <img src="velas.jpg" alt="Velas">
+      <img src="velas.jpg" alt="Velas Esotéricas" />
     </section>
 
-    <!-- 💧 Banhos -->
-    <section id="banhos" class="sessao">
+    <!-- 🛁 Banhos -->
+    <section class="sessao" id="banhos">
       <h2>Banhos</h2>
-      <img src="banhos.jpg" alt="Banhos">
+      <img src="banhos.jpg" alt="Banhos de Prosperidade" />
     </section>
 
-    <!-- 🔮 Tarô e Baralho Cigano -->
-    <section id="tarot" class="sessao">
+    <!-- 🃏 Tarô e Baralho Cigano -->
+    <section class="sessao" id="tarot">
       <h2>Tarô e Baralho Cigano</h2>
-      <img src="tarot.jpg" alt="Tarô e Baralho Cigano">
+      <img src="tarot.jpg" alt="Leituras de Tarô e Baralho Cigano" />
     </section>
 
   </main>
 
-  <!-- 💬 Botão WhatsApp -->
-  <a href="https://wa.me/5511939375761" class="whatsapp-float" target="_blank">
-    <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp">
+  <!-- 💌 Botão Flutuante do WhatsApp -->
+  <a class="whatsapp-float" href="https://wa.me/5511939375761" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
   </a>
 
-  <!-- 👣 Rodapé -->
+  <!-- 🌙 Rodapé Místico -->
   <footer class="rodape">
-    <p>✨ Herança Divina © 2025 — Criado com magia, luz e amor ✨</p>
+    <p>✨ Herança Divina © 2025 • Banhos • Velas • Incensos • Tarô ✨<br>
+    Desenvolvido com amor cósmico 💫</p>
   </footer>
 
 </body>
